test/files/neg/t1215.scala
object Test {
  val x = 1 += 1
}
